--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "../styles/App.css";
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,12 +18,14 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #4f4f4f;
+  padding: 30px;
+  color: #333;
+  background-image: url('../../public/img/slider_Diversa-Tecnologia.jpg'); 
+  background-repeat: repeat;
+  background-position: center;
+  background-size: cover;
 }
+
